[gd_scene load_steps=7 format=3 uid="uid://c7ggggbdw6ivc"]

[ext_resource type="Script" path="res://Scripts/StudyTable.gd" id="1_kya1g"]
[ext_resource type="Texture2D" uid="uid://ch1adleeduov1" path="res://textures/Prototype/study_table.png" id="2_25s4d"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_bgcxc"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="SphereShape3D" id="SphereShape3D_omc28"]
radius = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7e8wt"]
albedo_texture = ExtResource("2_25s4d")
uv1_scale = Vector3(2, 2, 2)
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_cwqc3"]

[node name="StudyTable" type="Area3D"]
collision_layer = 128
collision_mask = 2
script = ExtResource("1_kya1g")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_bgcxc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_omc28")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_7e8wt")
mesh = SubResource("BoxMesh_cwqc3")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
